--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "reactotron-react-js": "^3.3.6",
     "reactotron-redux": "^3.1.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
   },
   "scripts": {
@@ -49,5 +50,9 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/jorgeeder/modulo07.git",
+  "author": "jorgeeder <jorgeeder.js@gmail.com>",
+  "license": "MIT"
 }
